<?xml version="1.0"?>
<package format="2">
  <name>fluent_logger_ros</name>
  <version>0.0.0</version>
  <description>Logging tools for fluentd</description>

  <maintainer email="akio.code@gmail.com">Akiyoshi Ochiai</maintainer>

  <Cicense>BSD 2-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rosgraph_msgs</depend>
  <depend>msgpack</depend>

  <export>
  </export>
</package>
